--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="google-site-verification" content="sdz4d86QkTWaWHiWkS9mtiln38Bu0wirf94l-z1MkhQ" />
 
 
-  <title>Instruct-NeRF2NeRF: Editing 3D Scenes with Instructions</title>
+  <title>Customize your NeRF: Adaptive Source Driven 3D Scene Editing via Local-Global Iterative Training</title>
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-87HN038KJT"></script>
@@ -123,7 +123,7 @@
 
       <h1 class="tldr">
         <b>TL;DR</b>:
-        Instruct-NeRF2NeRF enables instruction-based editing of NeRFs via a 2D diffusion model
+        Customize your NeRF: Adaptive Source Driven 3D Scene Editing via Local-Global Iterative Training
       </h1>
       <video id="main-video" muted autoplay controls playsinline loop>
         <source id="mp4" src="data/videos/face.mp4" type="video/mp4">
@@ -132,7 +132,12 @@
       <h2 class="section-header">Overview</h2>
       <div class="paragraph">
         <p>
-          We propose a method for editing NeRF scenes with text-instructions. Given a NeRF of a scene and the
+          In this paper, we target the adaptive source driven 3D scene editing task by proposing a CustomNeRF model that unifies a text description or a reference image as the editing prompt.
+          However, obtaining desired editing results conformed with the editing prompt is nontrivial since there exist two significant challenges, including accurate editing of only foreground regions and multi-view consistency given a single-view reference image.
+          To tackle the first challenge, we propose a Local-Global Iterative Editing (LGIE) training scheme that alternates between foreground region editing and full-image editing, aimed at foreground-only manipulation while preserving the background.
+          For the second challenge, we also design a class-guided regularization that exploits class priors within the generation model to alleviate the inconsistency problem among different views in image-driven editing.
+          Extensive experiments show that our CustomNeRF produces precise editing results under various real scenes for both text- and image-driven settings.
+          <!-- We propose a method for editing NeRF scenes with text-instructions. Given a NeRF of a scene and the
           collection
           of images used to reconstruct it, our method uses an image-conditioned diffusion model (<a
             href="https://www.timothybrooks.com/instruct-pix2pix">InstructPix2Pix</a>) to
@@ -140,7 +145,7 @@
           scene that
           respects the edit instruction. We demonstrate that our proposed method is able to edit large-scale,
           real-world
-          scenes, and is able to accomplish more realistic, targeted edits than prior work.
+          scenes, and is able to accomplish more realistic, targeted edits than prior work. -->
         </p>
       </div>
 
