--- a/index.html
+++ b/index.html
@@ -196,62 +196,105 @@
 </section>
 
 
-<!-- <section class="hero is-light is-small">
+<section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-steve">
-          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/steve.mp4"
+          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%" width="100%">
+            <source src="data/my_videos/shoe/shoe_basketball.mp4"
                     type="video/mp4">
           </video>
         </div>
-        <div class="item item-chair-tp">
+        <div class="item item-steve">
+          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%" width="100%">
+            <source src="data/my_videos/shoe/shoe_football.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-steve">
+          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%" width="100%">
+            <source src="data/my_videos/shoe/shoe_canvas.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-steve">
+          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%" width="100%">
+            <source src="data/my_videos/hat10.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-steve">
+          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%" width="100%">
+            <source src="data/my_videos/hat11.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-steve">
+          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%" width="100%">
+            <source src="data/my_videos/car1.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-steve">
+          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%" width="100%">
+            <source src="data/my_videos/shoe_n_10.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-steve">
+          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%" width="100%">
+            <source src="data/my_videos/shoe_n_5.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+
+        <!-- <div class="item item-chair-tp">
           <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/chair-tp.mp4"
                     type="video/mp4">
           </video>
-        </div>
-        <div class="item item-shiba">
+        </div> -->
+        <!-- <div class="item item-shiba">
           <video poster="" id="shiba" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/shiba.mp4"
                     type="video/mp4">
           </video>
-        </div>
-        <div class="item item-fullbody">
+        </div> -->
+        <!-- <div class="item item-fullbody">
           <video poster="" id="fullbody" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/fullbody.mp4"
                     type="video/mp4">
           </video>
-        </div>
-        <div class="item item-blueshirt">
+        </div> -->
+        <!-- <div class="item item-blueshirt">
           <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/blueshirt.mp4"
                     type="video/mp4">
           </video>
-        </div>
-        <div class="item item-mask">
+        </div> -->
+        <!-- <div class="item item-mask">
           <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/mask.mp4"
                     type="video/mp4">
           </video>
-        </div>
-        <div class="item item-coffee">
+        </div> -->
+        <!-- <div class="item item-coffee">
           <video poster="" id="coffee" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/coffee.mp4"
                     type="video/mp4">
           </video>
-        </div>
-        <div class="item item-toby">
+        </div> -->
+        <!-- <div class="item item-toby">
           <video poster="" id="toby" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/toby2.mp4"
                     type="video/mp4">
           </video>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
-</section> -->
+</section>
 
 
 <section class="section">
