--- a/index.html
+++ b/index.html
@@ -92,24 +92,23 @@
           <h1 class="title is-1 publication-title">Customize your NeRF: Adaptive Source Driven 3D Scene Editing via Local-Global Iterative Training</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <!-- <a href="https://keunhong.com">Runze He</a><sup>1</sup>,</span> -->
-              Runze He<sup>1,2</sup>,
+
+
+              <a href="https://github.com/hrz2000">Runze He</a><sup>1,2*</sup>,
+              <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=hVbSuo0AAAAJ&view_op=list_works&sortby=pubdate">Shaofei Huang</a><sup>1,2*</sup>,
+              <a href="https://scholar.google.com.hk/citations?user=h93ctSsAAAAJ&hl=zh-CN&oi=ao">Xuecheng Nie</a><sup>3</sup>,
+              <a href="ttps://scholar.google.com.hk/citations?user=ArjkrTkAAAAJ&hl=zh-CN&oi=ao">Tianrui Hui</a><sup>1,2</sup>,
+
             </span>
+
+
             <span class="author-block">
-              Shaofei Huang<sup>1,2</sup>,
-            </span>
-            <span class="author-block">
-              Xuecheng Nie</a><sup>3</sup>,
-            </span>
-            <span class="author-block">
-              Tianrui Hui</a><sup>1,2</sup>,
-            </span>
-            <span class="author-block">
-              Luoqi Liu</a><sup>3</sup>,
-              Jiao Dai</a><sup>1,2</sup>,
-              Jizhong Han</a><sup>1,2</sup>,
-              Guanbin Li</a><sup>4</sup>,
-              Si Liu</a><sup>5</sup>
+              <!--  -->
+              <a href="https://scholar.google.com.hk/citations?user=nw4XTwMAAAAJ&hl=zh-CN&oi=ao">Luoqi Liu</a><sup>3</sup>,
+              <a href="https://people.ucas.ac.cn/~daijiao">Jiao Dai</a><sup>1,2</sup>,
+              <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=0b_BPiMAAAAJ&view_op=list_works&sortby=pubdate">Jizhong Han</a><sup>1,2</sup>,
+              <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=2A2Bx2UAAAAJ&view_op=list_works&sortby=pubdate">Guanbin Li</a><sup>4</sup>,
+              <a href="https://scholar.google.com.hk/citations?user=-QtVtNEAAAAJ&hl=zh-CN&oi=ao">Si Liu</a><sup>5</sup>
             </span>
           </div>
 
@@ -154,12 +153,12 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://github.com/hrz2000/CustomNeRF?tab=readme-ov-file"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Coming soon</span>
+                  <span>Github</span>
                   </a>
               </span>
               <!-- Dataset Link. -->
