--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Customize your NeRF: Adaptive Source Driven 3D Scene Editing via Local-Global Iterative Training</title>
 
+  <!-- <h1>Custg</h1> -->
+  <!-- <div class="title-row">
+    <h1 class="title">Instruct-NeRF2NeRF</h1>
+    <h1 class="subheader">Editing 3D Scenes with Instructions</h1>
+    <h1 class="subheader">ICCV 2023 (Oral)</h1>
+  </div> -->
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
   <script>
@@ -90,15 +97,16 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">Customize your NeRF: Adaptive Source Driven 3D Scene Editing via Local-Global Iterative Training</h1>
+          
+          <h5 class="title is-5 publication-title">CVPR 2024</h5>
+          
           <div class="is-size-5 publication-authors">
+
             <span class="author-block">
-
-
               <a href="https://github.com/hrz2000">Runze He</a><sup>1,2*</sup>,
               <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=hVbSuo0AAAAJ&view_op=list_works&sortby=pubdate">Shaofei Huang</a><sup>1,2*</sup>,
               <a href="https://scholar.google.com.hk/citations?user=h93ctSsAAAAJ&hl=zh-CN&oi=ao">Xuecheng Nie</a><sup>3</sup>,
               <a href="ttps://scholar.google.com.hk/citations?user=ArjkrTkAAAAJ&hl=zh-CN&oi=ao">Tianrui Hui</a><sup>1,2</sup>,
-
             </span>
 
 
